Make java.awt.color accessible
Apparently, the gson serialization needs this